--- a/app/assets/stylesheets/store.scss
+++ b/app/assets/stylesheets/store.scss
@@ -9,3 +9,16 @@ div.field {
     margin-left:0;
   }
 }
+table.results {
+  text-align: left;
+
+  border-spacing: 0;
+  border-collapse: collapse;
+  border: 1px solid black;
+
+  th,td { border-left: 1px solid black; border-right: 1px solid black;}
+
+  th    { background-color: #ccc }
+  .even { background-color: white; }
+  .odd  { background-color: #eee }
+}
