--- a/app/views/stores/search.html.erb
+++ b/app/views/stores/search.html.erb
@@ -1,6 +1,16 @@
 <!-- Search Results  -->
 <% if @stores.blank? %>
   <h4>There are no stores that currently satisfy your needs.</h4>
+<% else %>
+  <table class="results">
+  <tr>
+    <th>Store</th>
+    <th>City</th>
+  </tr>
 
-  <p><%= link_to "Search Again", :search_form_stores %></p>
+  <% @stores.each do |store| %>
+    <%= results_table_row [store.name, store.city] %>
+  <% end %>
 <% end %>
+
+<p><%= link_to "Search Again", :search_form_stores %></p>
