Link to coding challenge from root od hosted app

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,1 @@
-<h1>Tacocopter SQL Training</h1>
-
-<ul>
-  <li><%= link_to "Connecting", connecting_path %></li>
-  <li><%= link_to "Schema", schema_path %></li>
-  <li><%= link_to "Questions", questions_path %></li>
-</ul>
+<p><%= link_to "Search Stores for Tacos and Salsas (Coding Challenge)", :search_form_stores %></p>
